@@ -2,10 +2,6 @@
 
 xkb_base := /usr/share/X11/xkb
 
-override_dh_autoreconf:
-	intltoolize -c -f
-	AUTOPOINT=true dh_autoreconf autoreconf -- -vfi
-
 override_dh_auto_configure:
 	dh_auto_configure -- \
 	  --with-xkb-rules-symlink=xfree86,xorg \
@@ -17,6 +13,7 @@ override_dh_auto_install:
 	$(MAKE) -C build install DESTDIR=$(CURDIR)/debian/xkb-data
 
 	# Treat the udeb as an exact copy, but remove messages/pkg-config/man-pages:
+	mkdir $(CURDIR)/debian/xkb-data-udeb
 	cp -r $(CURDIR)/debian/xkb-data/* $(CURDIR)/debian/xkb-data-udeb
 	rm -rf $(CURDIR)/debian/xkb-data-udeb/usr/share/locale
 	rm -rf $(CURDIR)/debian/xkb-data-udeb/usr/share/man
